--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section class="container principal">
     <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
     <img src="img/Combo.png" alt="Combo+ é uma junção do alura+ eo alura lingua">
+    </section>
 </body>
 </html>
