--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <section class="container principal">
     <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
     <img src="img/Combo.png" alt="Combo+ é uma junção do alura+ eo alura lingua">
+    <a href="www.alura.com.br">*O preço pode variar caso a assinatura seja feita em outros planos.</a>
     </section>
 </body>
 </html>
