--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 </head>
 <body>
     <section class="container principal">
+    <div>  
     <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
     <img src="img/Combo.png" alt="Combo+ é uma junção do alura+ eo alura lingua">
     <a href="www.alura.com.br" class="container_botao">Assine por 12x de R$ 120,00*</a>
+    <a href="www.alura.com.br" class="container_botao botao_secundario">Assinar somente o Alura+</a>
+    </div> 
     </section>
 </body>
 </html>
