--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div> 
     </section>
 
-    <section class="container_secundario">
+    <section class="container secundario">
         <img src="img/Plataformas.png" alt="Um monitor e um celular com alura plus aberto" class="secundario_imagem">
         <div class="container_descricao">
            <h2 class="descricao_titulo">Assista do seu jeito</h2>
