--- a/index.html
+++ b/index.html
@@ -29,5 +29,12 @@
         </div>
         
     </section>
+    <section class="container secundario">
+        <div class="container_descricao">
+        <p class="descricao_texto">
+            
+        </p>
+        </div>
+    </section>
 </body>
 </html>
